--- a/hashtables_work.ipynb
+++ b/hashtables_work.ipynb
@@ -32,16 +32,17 @@
     "    # by assessing each weight's target_weight and checking hashtable for it\n",
     "    for index, weight in enumerate(weights):\n",
     "        target_weight = limit - weight # here we compute the target_weight \n",
-    "        target_index = cache[target_weight] # check if such weight exists\n",
     "        \n",
-    "        if target_index != None:\n",
+    "        if target_weight in cache:\n",
+    "            \n",
+    "            target_index = cache[target_weight] # check if such weight exists\n",
     "            return (index, target_index) if index > target_index else (target_index, index)\n",
     "    return None\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +59,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-8ff68a4b4165>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mtarget_weight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlimit\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;31m# here we compute the target_weight\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_weight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mtarget_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget_weight\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# check if such weight exists\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-2-31abd12da87c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mtarget_weight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlimit\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;31m# here we compute the target_weight\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtarget_weight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mtarget_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget_weight\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# check if such weight exists\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mKeyError\u001b[0m: 17"
      ]
     }
@@ -79,49 +80,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ex 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  Hint:  You may not need all of these.  Remove the unused functions.\n",
+    "class Ticket:\n",
+    "    def __init__(self, source, destination):\n",
+    "        self.source = source\n",
+    "        self.destination = destination\n",
+    "\n",
+    "\n",
+    "def reconstruct_trip(tickets, length):\n",
+    "    \"\"\"\n",
+    "    YOUR CODE HERE\n",
+    "    \"\"\"\n",
+    "    cache = {}\n",
+    "    \n",
+    "    for ticket in tickets:\n",
+    "        cache[ticket.source] = ticket.destination\n",
+    "    print(cache.items())\n",
+    "    route = []\n",
+    "    route.append(cache[\"NONE\"])\n",
+    "    print(route)\n",
+    "    searching = True\n",
+    "    while searching is True:\n",
+    "        for ticket in tickets:\n",
+    "            _next = route[-1]\n",
+    "            route.append(cache[_next])\n",
+    "            if route[-1] == \"NONE\":\n",
+    "                searching = False\n",
+    "    return route\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('NONE', 'PDX'), ('PDX', 'DCA'), ('DCA', 'NONE')])\n",
+      "['PDX']\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "dict_items([(4, 0), (6, 1), (10, 2), (15, 3), (16, 4)])"
+       "['PDX', 'DCA', 'NONE', 'PDX']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "cache.items()"
+    "ticket_1 = Ticket(\"NONE\", \"PDX\")\n",
+    "ticket_2 = Ticket(\"PDX\", \"DCA\")\n",
+    "ticket_3 = Ticket(\"DCA\", \"NONE\")\n",
+    "\n",
+    "tickets = [ticket_1, ticket_2, ticket_3]\n",
+    "\n",
+    "expected = [\"PDX\", \"DCA\", \"NONE\"]\n",
+    "reconstruct_trip(tickets, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "17",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-550b4a941dac>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mweights_3\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m15\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m16\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mget_indices_of_item_weights\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights_3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m21\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;31m#         self.assertTrue(answer_3[0] == 3)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m#         self.assertTrue(answer_3[1] == 1)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-3-7c7a94ec247c>\u001b[0m in \u001b[0;36mget_indices_of_item_weights\u001b[0;34m(weights, length, limit)\u001b[0m\n\u001b[1;32m     18\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m         \u001b[0mtarget_weight\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlimit\u001b[0m \u001b[0;34m-\u001b[0m \u001b[0mweight\u001b[0m \u001b[0;31m# here we compute the target_weight\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0mtarget_index\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcache\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtarget_weight\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;31m# check if such weight exists\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mtarget_index\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 17"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_items([('NONE', 'PDX'), ('PDX', 'DCA'), ('DCA', 'NONE')])\n",
+      "['PDX']\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "['PDX', 'DCA', 'NONE', 'PDX']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "weights_3 = [4, 6, 10, 15, 16]\n",
-    "get_indices_of_item_weights(weights_3, 5, 21)\n",
-    "#         self.assertTrue(answer_3[0] == 3)\n",
-    "#         self.assertTrue(answer_3[1] == 1)\n"
+    "reconstruct_trip(tickets, 3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
