Checkpoint ex2 with comments

--- a/hashtables_work.ipynb
+++ b/hashtables_work.ipynb
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,12 +118,12 @@
     "            route.append(cache[_next])\n",
     "            if route[-1] == \"NONE\":\n",
     "                searching = False\n",
-    "    return route\n"
+    "                return route\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -137,10 +137,10 @@
     {
      "data": {
       "text/plain": [
-       "['PDX', 'DCA', 'NONE', 'PDX']"
+       "['PDX', 'DCA', 'NONE']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -172,10 +172,10 @@
     {
      "data": {
       "text/plain": [
-       "['PDX', 'DCA', 'NONE', 'PDX']"
+       "['PDX', 'DCA', 'NONE']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
