--- a/hashtables_work.ipynb
+++ b/hashtables_work.ipynb
@@ -185,18 +185,180 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ex 3"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def intersection(arrays):\n",
+    "    \"\"\"\n",
+    "    YOUR CODE HERE\n",
+    "    \"\"\"\n",
+    "    arrays.sort(key=len)\n",
+    "    \n",
+    "    cache = {}\n",
+    "    \n",
+    "    for item in arrays[0]:\n",
+    "        if item in cache:\n",
+    "            pass\n",
+    "        else:\n",
+    "            cache[item] = item\n",
+    "    \n",
+    "    for item in arrays[1:]:\n",
+    "        for \n",
+    "    cache2 = {}\n",
+    "    for \n",
+    "\n",
+    "    return result\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'dict' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-9e5ab3e9c432>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcaches\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m6\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'dict' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "caches = dict() * 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "testing = [\n",
+    "    [12, 7, 2, 9, 1],\n",
+    "    [99, 2, 7, 1,],    [1, 2]\n",
+    "]\n",
+    "\n",
+    "testing.sort(key=len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 2], [99, 2, 7, 1], [12, 7, 2, 9, 1]]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ex 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## File Finder\n",
+    "\n",
+    "Given a list of full paths to files, and a list of filenames to query,\n",
+    "report all the full paths that match that filename.\n",
+    "\n",
+    "Example input:\n",
+    "\n",
+    "```python\n",
+    "paths = [\n",
+    "    \"/usr/local/share/foo.txt\",\n",
+    "    \"/usr/bin/ls\",\n",
+    "    \"/home/davidlightman/foo.txt\",\n",
+    "    \"/bin/su\"\n",
+    "]\n",
+    "\n",
+    "queries = [\n",
+    "    \"ls\",\n",
+    "    \"foo.txt\",\n",
+    "    \"nosuchfile.txt\"\n",
+    "]\n",
+    "```\n",
+    "\n",
+    "Example return value:\n",
+    "\n",
+    "```\n",
+    "[ \"/usr/local/share/foo.txt\", \"/usr/bin/ls\", \"/home/davidlightman/foo.txt\" ]\n",
+    "```\n",
+    "\n",
+    "because that's where the `foo.txt` and `ls` files are. \n",
+    "\n",
+    "The file `\"nosuchfile.txt\"` is ignored because it's not in the `paths`.\n",
+    "\n",
+    "Return list can be in any order.\n",
+    "\n",
+    "Limits:\n",
+    "\n",
+    "* Up to approximately 1,000,000 paths.\n",
+    "* Up to approximately 1,000,000 queries.\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Your code here\n",
+    "\n",
+    "\n",
+    "\n",
+    "def finder(files, queries):\n",
+    "    \"\"\"\n",
+    "    YOUR CODE HERE\n",
+    "    \"\"\"\n",
+    "    cache = {}\n",
+    "    for path in files:\n",
+    "        file_item = path.split('/')[-1]\n",
+    "        \n",
+    "        if file_item in cache:\n",
+    "            cache[file_item].append(path)\n",
+    "        else:\n",
+    "            cache[file_item] = [file]\n",
+    "\n",
+    "    result = []\n",
+    "    for query in queries:\n",
+    "        if query in cache:\n",
+    "            results = cache[query]\n",
+    "            for path in results:\n",
+    "                result.append(path)\n",
+    "    else:\n",
+    "        pass\n",
+    "    return result\n"
+   ]
   }
  ],
  "metadata": {
