Add ex5.py implementation (passes all tests).

--- a/scratch_work.ipynb
+++ b/scratch_work.ipynb
@@ -10,9 +10,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": 3
+   "version": "3.7.6-final"
   },
-  "orig_nbformat": 2
+  "orig_nbformat": 2,
+  "kernelspec": {
+   "name": "python_defaultSpec_1597981021631",
+   "display_name": "Python 3.7.6 64-bit ('base': conda)"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2,
@@ -22,9 +26,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# "
-   ]
+   "source": []
   }
  ]
 }
